# DeepSpatial

./: README.md  index.html  pyproject.toml
.github/workflows/: docs-pages.yml  publish-pypi.yml
deepspatial/: __init__.py  core.py  module.py  vis_utils.py
deepspatial/data_utils/: __init__.py  dataset.py  uot_solver.py
deepspatial/models/: git.py
deepspatial/transport/: transport.py
docs/source/: citation.md  conf.py  index.md  installation.md
docs/source/_static/: custom.css
docs/source/api/: core.md  data_utils.md  index.md  models.md  module.md  vis_utils.md
docs/source/tutorials/: deepstarmap_mouse_brain.ipynb  imc_human_breastcancer.ipynb  index.md  merfish_mouse_hypothalamus.ipynb  test.ipynb
